--- a/contact.html
+++ b/contact.html
@@ -46,15 +46,15 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav float-nav nav-algn_r">
-                        <li><a href="index.html" class="active">Home</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="index.html" class="active">首页</a></li>
+                                <li><a href="about.html">关于</a></li>
                     </ul>
                     <div class="logo float-nav nav-algn_c">
-                       <h1><a href="index.html">Fat burn</a></h1>
-                    </div>
-                    <ul class="nav navbar-nav navbar-right float-nav nav-algn_l">
-                          <li><a href="gallery.html">Gallery</a></li>
-                          <li><a href="contact.html">Contact</a></li>
+                        <h1><a href="index.html">Fighting</a></h1>
+                            </div>
+                            <ul class="nav navbar-nav navbar-right float-nav nav-algn_l">
+                                  <li><a href="gallery.html">画廊</a></li>
+                                  <li><a href="contact.html">联系我</a></li>
                     </ul>
                     <div class="clearfix"></div>
                     </div><!-- /.navbar-collapse -->
@@ -69,7 +69,7 @@
     <!--header nav-->
         <div class="contact">
             <div class="container">
-                <h3>Contact</h3>
+                <h3>联系</h3>
                 <div class="contact-content">
                     <div class="map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1578265.0941403757!2d-98.9828708842255!3d39.41170802696131!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited+States!5e0!3m2!1sen!2sin!4v1407515822047"> </iframe>
@@ -82,30 +82,31 @@
                             <textarea value="Message:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Message ';}">Your Message</textarea><br>
                         </div>	
                        <div class="submit"> 
-                            <input class="btn btn-default cont-btn" type="submit" value="SEND " />
+                            <input class="btn btn-default cont-btn" type="submit" value="发送 " />
                       </div>
                     </form>
                 </div>
             </div>
         </div>
     <!--footer-->
-        <div class="footer">
+         <div class="footer">
             <div class="container">
                 <div class="col-md-4 ft logo">
                     <div class="logo fot">
-                       <h1><a href="index.html" class="ft-log">Fat burn</a></h1>
+                       <h1><a href="index.html" class="ft-log">Start All Over Again</a></h1>
                     </div>
                 </div>
                 <div class="col-md-4 ft cpyrt">
-                    <p>Copyright &copy; 2015.Company name All rights reserved.<a target="_blank" href="http://www.cssmoban.com/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+                    <p>Looking Back Suddenly Like A Dream<回首恍然如梦><a target="_blank" href="http://user.qzone.qq.com/760221895/infocenter?via=toolbar">个人空间</a></p>
                 </div>
                 <div class="col-md-4 ft soc">
+               
                     <ul class="social">
-                        <li><a href="#" class="face"></a></li>
-                        <li><a href="#" class="twit"></a></li>
-                        <li><a href="#" class="gplus"></a></li>
-                        <li><a href="#" class="inst"></a></li>
-                        <li><a href="#" class="pint"></a></li>
+                       <li><a href="https://www.uc123.com/" class="face"></a></li> 
+                        <li><a href="http://www.sina.com.cn/" class="twit"></a></li>
+                        <li><a href="https://www.baidu.com/" class="gplus"></a></li>
+                        <li><a href="http://www.sohu.com/" class="inst"></a></li>
+                        <li><a href="http://www.ifeng.com/" class="pint"></a></li> 
                     </ul>
                 </div>
                 <div class="clearfix"></div>
