--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                             <h4>实践经历</h4>
                             <p><北京必胜客比萨饼有限公司(北戴河分店)>
 <沈阳东大开发软件系统股份有限公司||学习实习生||社会学习>
- <北京工地兼职><在校期间兼职><秦皇岛职业技术学院清源书社社长><秦皇岛职业技术学院Hi-here轮滑社宣传部部长></p>
+ <北京工地兼职><在校期间兼职><秦皇岛职业技术学院清源书社社长><秦皇岛职业技术学院Hi-here轮滑社宣传部部长> <大三 在石家庄激萌信息技术有限公司></p>
                         </div>
                         <div class="pull-right nutrn-icn">
                             <span class="glyphicon glyphicon-heart nutrn-icon" aria-hidden="true"></span>
@@ -234,8 +234,7 @@
                     <div class="col-md-4 nutrn-grid">
                         <div class="pull-left nutrn-text">
                             <h4>技能</h4>
-                             <p> PHP     Dreamweaver   JSP   Photoshop    JAVA   HTML5   ASP.NET      Flash
-</p>
+                             <p> HTML5/CSS3  原生js jQuery Zepto swiper  iscroll bootstrap vue AJAX  git  了解react(正在自学)
                         </div>
                         <div class="pull-right nutrn-icn">
                             <span class="glyphicon glyphicon-hourglass nutrn-icon" aria-hidden="true"></span>
